--- a/Week6/A0_DataAggregation/part01_ingestion_cleaning/notebooks/pendle_data_aggregation.ipynb
+++ b/Week6/A0_DataAggregation/part01_ingestion_cleaning/notebooks/pendle_data_aggregation.ipynb
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "7c5db93d-f7b9-46f2-abda-446cf51c3a54",
    "metadata": {},
    "outputs": [
@@ -691,7 +691,51 @@
       "📈 Fetching Google Trends data (daily granularity) for: ['market crash', 'recession', 'buy gold', 'stock market crash']\n",
       "🔁 Year 2016, Batch 1: ['market crash']\n",
       "❌ Error fetching ['market crash'] for 2016: The request failed: Google returned a response with code 429\n",
-      "⏳ Cooling down before retrying...\n"
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2016, Batch 2: ['recession']\n",
+      "❌ Error fetching ['recession'] for 2016: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2016, Batch 3: ['buy gold']\n",
+      "❌ Error fetching ['buy gold'] for 2016: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2016, Batch 4: ['stock market crash']\n",
+      "❌ Error fetching ['stock market crash'] for 2016: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2017, Batch 1: ['market crash']\n",
+      "❌ Error fetching ['market crash'] for 2017: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2017, Batch 2: ['recession']\n",
+      "❌ Error fetching ['recession'] for 2017: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2017, Batch 3: ['buy gold']\n",
+      "❌ Error fetching ['buy gold'] for 2017: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2017, Batch 4: ['stock market crash']\n",
+      "❌ Error fetching ['stock market crash'] for 2017: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2018, Batch 1: ['market crash']\n",
+      "❌ Error fetching ['market crash'] for 2018: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2018, Batch 2: ['recession']\n",
+      "❌ Error fetching ['recession'] for 2018: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2018, Batch 3: ['buy gold']\n",
+      "❌ Error fetching ['buy gold'] for 2018: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2018, Batch 4: ['stock market crash']\n",
+      "❌ Error fetching ['stock market crash'] for 2018: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2019, Batch 1: ['market crash']\n",
+      "🔁 Year 2019, Batch 2: ['recession']\n",
+      "❌ Error fetching ['recession'] for 2019: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2019, Batch 3: ['buy gold']\n",
+      "❌ Error fetching ['buy gold'] for 2019: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "🔁 Year 2019, Batch 4: ['stock market crash']\n",
+      "❌ Error fetching ['stock market crash'] for 2019: The request failed: Google returned a response with code 429\n",
+      "⏳ Cooling down before retrying...\n",
+      "✅ Saved Google Trends data to ../data/raw/google_trends_2016_2019.csv\n"
      ]
     }
    ],
